@startuml

title __DOMAIN's Class Diagram__\n

  namespace com.vrush.microservices.financial {
    namespace specifications {
      namespace domain {
        class com.vrush.microservices.financial.specifications.domain.FieldIn {
            - attributeName : String
            - fieldList : String
            + FieldIn()
            + getAttributeName()
            + getFieldList()
        }
      }
    }
  }
  

  namespace com.vrush.microservices.financial {
    namespace specifications {
      namespace domain {
        class com.vrush.microservices.financial.specifications.domain.SpecificationFilter {
            - field : String
            - value : Object
            + SpecificationFilter()
            + SpecificationFilter()
            + getField()
            + getFieldIn()
            + getOperation()
            + getValue()
        }
      }
    }
  }
  

  com.vrush.microservices.financial.specifications.domain.SpecificationFilter o-- com.vrush.microservices.financial.specifications.domain.FieldIn : fieldIn
  com.vrush.microservices.financial.specifications.domain.SpecificationFilter o-- com.vrush.microservices.financial.specifications.enums.SpecificationOperationEnum : operation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
